@@ -1,3 +1,10 @@
+2002-05-23  Marcus Brinkmann  <marcus@gnu.org>
+
+	* i386/i386at/model_dep.c: Include <kern/cpu_number.h> and
+	<kern/assert.h>.
+	(machine_idle): New function.
+	* bogus/power_save.h (POWER_SAVE): Define to 1.
+
 2002-05-22  Roland McGrath  <roland@frob.com>
 
 	* configure.in (VERSION): New substituted variable: set to 1.3 now.
